# Copyright 2013-2021 The Salish Sea MEOPAR Contributors
# and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salishsea-tools"
#dynamic = [ "version" ]
version = "24.1.dev0"
description = "Tools for working with the SalishSeaCast NEMO model configurations and results"
readme = "README.rst"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
#license-files = { paths = ["LICENSE"] }
authors = [
    {name = "Doug Latornell", email = "dlatornell@eoas.ubc.ca"},
    {name = "The SalishSeaCast Project Contributors"}
]
dependencies = [
    # see envs/environment-dev.yaml for conda environment dev installation,
    # see envs/requirements.txt for package versions used during recent development
    "angles",
    "arrow",
    "bottleneck",
    "cmocean",
    "f90nml",
    "gsw",
    "matplotlib",
    "netCDF4",
    "numpy",
    "openpyxl",
    "pandas",
    "python-dateutil",
    "pytz",
    "requests",
    "retrying",
    "scipy",
    "tqdm",
    "xarray",
]

[project.urls]
"Documentation" = "https://salishsea-meopar-tools.readthedocs.org/en/latest/SalishSeaTools/"
"Changelog" = "https://github.com/43ravens/NEMO_Nowcast/releases"
"Issue Tracker" = "https://github.com/SalishSeaCast/tools/issues"
"Source Code" = "https://github.com/SalishSeaCast/tools/tree/main/SalishSeaTools"


[tool.setuptools.packages.find]
where = ["."]
